# _payments_gateway

./: ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  stripe_example.yaml
docs/: architecture.md  manifest-spec.md
manifests/: _schema.json  paypal.yaml
scripts/: validate_manifests.py
src/payments/api/: dependencies.py  main.py
src/payments/api/v1/: __init__.py  payments.py  providers.py  webhooks.py
src/payments/application/: ports.py
src/payments/application/commands/: create_payment.py  register_provider.py
src/payments/domain/: __init__.py  events.py  ids.py  money.py  payment.py  provider.py  status.py  transaction.py
src/payments/infrastructure/db/: schema.sql
src/payments/infrastructure/outbox/: __init__.py  relay.py
src/payments/infrastructure/secrets/: __init__.py  stores.py
src/payments/providers/engine/: __init__.py  executor.py  http_egress.py  registry.py
src/payments/providers/manifest/: __init__.py  schema.py
src/payments/providers/transformers/: __init__.py  response.py  templating.py
src/payments/providers/webhook/: __init__.py  verifier.py
